proyecto final womap

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 								<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 									<li class="nav-item">
-										<a class="nav-link active text-white" aria-current="page" href="index.html">Inicio</a>
+										<a class="nav-link active text-white" aria-current="page" href="index.html"> <strong> Inicio </strong> </a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link text-white" href="pages/sobreNosotras.html">Sobre Nosotras</a>
+										<a class="nav-link text-white" href="pages/sobrenosotras.html">Sobre Nosotras</a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link text-white" href="pages/laApp.html">La App</a>
@@ -87,20 +87,20 @@
 								src="img/logo womap png redondeado-08.png"
 								alt="logo womap"
 							/>
-							<h4 class="nombreFooter">Womap</h4>
+							<h4 class="nombreFooter my-0">Womap</h4>
 						</div>
 						<div class="icons">
 							<!--redes-->
 							<img class="icon" src="img/instagram.png" alt="icon instagram" />
-							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 							<img class="icon" src="img/gorjeo.png" alt="icon twitter" />
-							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 							<img
 								class="icon"
 								src="img/logotipo-de-linkedin.png"
 								alt="icon linkedin"
 							/>
-							<p class="iconTx d-none d-lg-block">Womap</p>
+							<p class="iconTx d-none d-lg-block my-0">Womap</p>
 						</div>
 					</div>
 				</div>
