--- a/pages/laApp.html
+++ b/pages/laApp.html
@@ -33,7 +33,7 @@
 										<a class="nav-link active text-white" href="sobrenosotras.html">Sobre Nosotras</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link text-white" href="laApp.html">La App</a>
+										<a class="nav-link text-white" href="laApp.html"><strong>La App</strong></a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link text-white" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
@@ -59,8 +59,6 @@
 								inconveniente.
 						</p>
 					</article>
-				</div>
-				<div>
 					<img
 						class="mockup1 fixed-bottom"
 						src="../img/mockup medio celu perspect.png"
@@ -85,15 +83,15 @@
 						<div class="icons">
 							<!--redes-->
 							<img class="icon" src="../img/instagram.png" alt="icon instagram" />
-							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 							<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
-							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 							<img
 								class="icon"
 								src="../img/logotipo-de-linkedin.png"
 								alt="icon linkedin"
 							/>
-							<p class="iconTx d-none d-lg-block">Womap</p>
+							<p class="iconTx d-none d-lg-block my-0">Womap</p>
 						</div>
 					</div>
 				</div>
