--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -37,7 +37,7 @@
 									<a class="nav-link text-white" href="laApp.html">La App</a>
 								  </li>
 								  <li class="nav-item">
-									<a class="nav-link text-white" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
+									<a class="nav-link text-white" href="preguntasFrecuentes.html"><strong>Preguntas Frecuentes</strong></a>
 								  </li>
 								  <li class="nav-item">
 									<a class="nav-link text-white" href="contactanos.html">Contactanos</a>
@@ -67,67 +67,52 @@
 						<h1>Preguntas frecuentes</h1>
 						<div> <!--preg 1-->
 							<div>
-								<h4 class="pregFrec">Pregunta 1</h4>
+								<h4 class="pregFrec">¿Cómo activo mi ubicación en vivo?</h4>
 							</div>
 							<div>
 								<p class="parrafoPregs">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-									Praesent risus risus, semper tempus suscipit in, consectetur eu
-									lectus. Curabitur vel tempus nisl. Proin vulputate ante at orci
-									finibus ornare. Vivamus semper mollis quam, quis consectetur
-									justo vulputate non. Maecenas sit amet lacus quis lorem
-									ullamcorper tempus. Vivamus in auctor nibh. Morbi volutpat non
-									enim ut sagittis. Quisque nulla ipsum, fringilla quis dapibus
-									ut, pulvinar ut nisi. Nam sit amet mi placerat, elementum orci
-									vel, venenatis ligula. Sed et nisi tincidunt, sollicitudin magna
-									a, varius sem. Donec lacus felis, consequat at rhoncus eget,
-									sollicitudin in augue. Sed consectetur, odio ut commodo
-									lobortis, velit tellus laoreet mi, vel mattis risus nunc vel
-									velit. Cras facilisis nibh ligula, eu faucibus eros finibus
-									feugiat. Quisque eu nisi in ex tristique rhoncus. Etiam quis
-									lobortis risus, ullamcorper efficitur enim. Phasellus ultricies,
-									leo sed facilisis tristique, lectus urna blandit ante, quis
-									convallis risus nunc ut lorem. Vestibulum molestie lobortis
-									purus sed accumsan. Duis fermentum vel urna pharetra euismod.
+									Si nunca activaste tu ubicación en vivo al ingresar a la
+									aplicación, deberás ir a la sección "Ajustes". Allí tendrás
+									la opción "Ajustes de notificación", y desde allí podrás
+									seleccionar la opción que más se acomode a tus necesidades,
+									incluída la opción "Utilizar siempre", que te permitirá enviar
+									tu ubicación en vivo a otros contactos, y que ellos puedan
+									visualizarla, a pesar de que te encuentres fuera de la
+									aplicación.		
 								</p>
 							</div>
 						</div>
 						<div> <!--preg 2-->
 							<div>
-								<h4 class="pregFrec">Pregunta 2</h4>
+								<h4 class="pregFrec">¿Cómo envío mi ubicación?</h4>
 							</div>
 							<div>
 								<p class="parrafoPregs">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-									Praesent risus risus, semper tempus suscipit in, consectetur eu
-									lectus. Curabitur vel tempus nisl. Proin vulputate ante at orci
-									finibus ornare. Vivamus semper mollis quam, quis consectetur
-									justo vulputate non. Maecenas sit amet lacus quis lorem
-									ullamcorper tempus. Vivamus in auctor nibh. Morbi volutpat non
-									enim ut sagittis. Quisque nulla ipsum, fringilla quis dapibus
-									ut, pulvinar ut nisi. Nam sit amet mi placerat, elementum orci
-									vel, venenatis ligula. Sed et nisi tincidunt, sollicitudin magna
-									a, varius sem. Donec lacus felis, consequat at rhoncus eget,
-									sollicitudin in augue.
+									Mientras se tenga activada la opción de "Utilizar siempre" en los
+									"Ajustes de Ubicación", todos los contactos que se tengan agregados
+									en la aplicación pueden visualizar tu ubicación entrando a "Ubicación
+									de personas". Pero si deseas que un contacto en específico esté al
+									tanto de tu recorrido, y puedas enviarle una notificación cuando
+									llegues a destino, puedes enviarle tu Ubicación en vivo. Deberás ir a
+									"Inicio", y de allí seleccionar "Enviar ubicación", seleccionar un contacto, ¡Y listo!
+									Se le enviará una notificación de que deseas que visualice tu ubicación
+									en vivo. Luego, podrás notificarle de tu llegada en Inicio > Compartiendo
+									ubicación > Notificar llegada. Allí completas los campos de texto, y
+									notificas tu llegada.
 								</p>
 							</div>
 						</div>
 						<div> <!--preg 3-->
 							<div>
-								<h4 class="pregFrec">Pregunta 3</h4>
+								<h4 class="pregFrec">¿Cómo visualizo la ubicación de un contacto?</h4>
 							</div>
 							<div>
 								<p class="parrafoPregs3">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-									Praesent risus risus, semper tempus suscipit in, consectetur eu
-									lectus. Curabitur vel tempus nisl. Proin vulputate ante at orci
-									finibus ornare. Vivamus semper mollis quam, quis consectetur
-									justo vulputate non. Maecenas sit amet lacus quis lorem
-									ullamcorper tempus. Vivamus in auctor nibh. Morbi volutpat non
-									enim ut sagittis. Quisque nulla ipsum, fringilla quis dapibus
-									ut, pulvinar ut nisi. Nam sit amet mi placerat, elementum orci
-									vel, venenatis ligula. Sed et nisi tincidunt, sollicitudin magna
-									a, varius sem.
+									Desde la sección “Ubicación” es posible visualizar la ubicación de cualquiera
+									de tus contactos que tenga los Ajustes de Ubicación en “Utilizar siempre” o
+									“Mientras se utiliza la aplicación”. Debes ir a la sección "Ubicación" desde la barra
+									inferior, de allí desplegar la pestaña de Personas, y buscar al contacto que desees
+									localizar.
 								</p>
 							</div>
 						</div>
@@ -150,15 +135,15 @@
 							<div class="icons">
 								<!--redes-->
 								<img class="icon" src="../img/instagram.png" alt="icon instagram" />
-								<p class="iconTx d-none d-lg-block">@WomapApp</p>
+								<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 								<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
-								<p class="iconTx d-none d-lg-block">@WomapApp</p>
+								<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 								<img
 									class="icon"
 									src="../img/logotipo-de-linkedin.png"
 									alt="icon linkedin"
 								/>
-								<p class="iconTx d-none d-lg-block">Womap</p>
+								<p class="iconTx d-none d-lg-block my-0">Womap</p>
 							</div>
 						</div>
 					</div>
