--- a/pages/sobrenosotras.html
+++ b/pages/sobrenosotras.html
@@ -30,7 +30,7 @@
 										<a class="nav-link text-white" aria-current="page" href="../index.html">Inicio</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link active text-white" href="sobrenosotras.html">Sobre Nosotras</a>
+										<a class="nav-link active text-white" href="sobrenosotras.html"><strong>Sobre Nosotras</strong></a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link text-white" href="laApp.html">La App</a>
@@ -76,11 +76,10 @@
 								De estas bases, y con el dolor de esta situación, nace Womap
 							</h2>
 							<p class="pNos">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-								id ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu
-								quis ex. Suspendisse semper arcu id nibh dapibus, quis dapibus
-								tellus rutrum. Fusce sollicitudin lorem viverra justo congue
-								eleifend.
+								Una aplicación de seguimiento y seguridad para mujeres, que se plantea no como solución,
+								sino como una herramienta más para que poseamos las mujeres para nuestra
+								seguridad. Para que podamos gozar nuestra libertad, sabiendo que otra mujer siempre
+								nos cuida. Porque queremos dejar de vivir con miedo.
 							</p>
 						</div>
 					</div>
@@ -106,7 +105,7 @@
 							class="circ d-none d-lg-block"
 							id="circ3"
 							src="../img/circulos rosas 3-07.png"
-								alt="8 de cada 10 prefieren que la sacompañen a la parada que las esperen allí"
+							alt="8 de cada 10 prefieren que la sacompañen a la parada que las esperen allí"
 						/>
 					</div>
 				</div>
@@ -116,13 +115,11 @@
 					<div class="nuestraMision">
 						<h2 class="titNos">Nuestra Misión</h2>
 							<p class="pNos">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id
-								ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu quis ex.
-								Suspendisse semper arcu id nibh dapibus, quis dapibus tellus rutrum.
-								Fusce sollicitudin lorem viverra justo congue eleifend. Sed faucibus
-								condimentum nisi, ut aliquet leo sagittis sit amet. Sed porttitor,
-								risus laoreet pretium viverra, risus augue fermentum nisl, non
-								pulvinar metus eros non enim.
+								Queremos lograr que las mujeres nos sintamos un pco más seguras
+								al transitar la vía pública sin compañía, con el conocimiento de
+								que alguien siempre estará atento ante cualquier inconveniente,
+								mediante un seguimiento activo de los movimientos y recorridos
+								realizados, mensajes y llamadas de emergencia.
 							</p>
 					</div>
 					<div class="video">
@@ -154,15 +151,15 @@
 						<div class="icons">
 							<!--redes-->
 							<img class="icon" src="../img/instagram.png" alt="icon instagram" />
-							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 							<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
-							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<p class="iconTx d-none d-lg-block my-0">@WomapApp</p>
 							<img
 								class="icon"
 								src="../img/logotipo-de-linkedin.png"
 								alt="icon linkedin"
 							/>
-							<p class="iconTx d-none d-lg-block">Womap</p>
+							<p class="iconTx d-none d-lg-block my-0">Womap</p>
 						</div>
 					</div>
 				</div>
